--- a/.github/workflows/create-nuget.yml
+++ b/.github/workflows/create-nuget.yml
@@ -1,8 +1,8 @@
-name: CI
+name: Create Nuget
 
 on:
-  pull_request:
-    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
     
   workflow_dispatch:
 
