Make windows workflow work

--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -3,29 +3,36 @@ name: Build binary
 on:
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
+  #workflow_dispatch: # TODO: replace ${{github.head_ref}} for workflow_dispatch...
 
 jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Echo branch name
+        run: echo ${{github.head_ref}} 
+
+      - name: Checkout current repo
+        uses: actions/checkout@v3
+        with:
+          ref: ${{github.head_ref}}
+          path: storage
 
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
 
-      - name: Checkout repository
+      - name: Checkout cpu_features.NET
         uses: actions/checkout@v3
         with:
           repository: toor1245/cpu_features.NET
           path: cpu_features.NET
-      
+
       - name: Cache CMake project
         id: project
         uses: actions/cache@v3
         with:
-          path: cpu_features.NET
-          key: project-${{ hashFiles('./cpu_features.NET/*') }}
+          path: cpu_features.NET/cmake-build-release
+          key: project-${{ hashFiles('./cpu_features.NET/src/*') }}
 
       - name: Configure CMake project
         if: steps.project.outputs.cache-hit != 'true'
@@ -41,14 +48,15 @@ jobs:
       # TODO: make it depend on version?
       - name: Copy dll
         run: |
-          mkdir -p ./runtimes/win-x64/native/
-          cp ./cpu_features.NET/cmake-build-release/lib/cpu_features_dotnet.x64.dll ./runtimes/win-x64/native/
-          ls ./runtimes/win-x64/native/
+          mkdir -p ./storage/runtimes/win-x64/native/
+          cp ./cpu_features.NET/cmake-build-release/lib/cpu_features_dotnet.x64.dll ./storage/runtimes/win-x64/native/
 
-      - name: Deploy
-        uses: moodiest/push-to-branch-action@develop
-        env:
-          REPO: self
-          BRANCH: "create-pull-request/patch"
-          FOLDER: runtimes
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Git Push
+        run: |
+          cd storage
+          git status
+          git config user.name "GitHub Actions Bot"
+          git config user.email "<>"
+          git add .
+          git commit -m "Add win-x64 binary"
+          git push origin ${{github.head_ref}}
