Add ubuntu binary building

--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -7,7 +7,19 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.platform.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        platform:
+        - {
+            os: windows-latest,
+            rid: win-x64
+          },
+        - {
+            os: ubuntu-latest,
+            rid: linux-x64
+          }
     steps:
       - name: Echo branch name
         run: echo ${{github.head_ref}} 
@@ -38,18 +50,19 @@ jobs:
         if: steps.project.outputs.cache-hit != 'true'
         run: |
           cd cpu_features.NET
-          cmake . -Bcmake-build-release -DCMAKE_BUILD_TYPE=Release -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          ${{ runner.os!='Windows'&&'sudo '||''}}cmake . -Bcmake-build-release -DCMAKE_BUILD_TYPE=Release -GNinja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
 
       - name: Build CMake project
         run: |
           cd cpu_features.NET
-          cmake --build cmake-build-release --config=Release
+          ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build cmake-build-release --config=Release
 
       # TODO: make it depend on version?
       - name: Copy dll
+        shell: bash
         run: |
-          mkdir -p ./storage/runtimes/win-x64/native/
-          cp ./cpu_features.NET/cmake-build-release/lib/cpu_features_dotnet.x64.dll ./storage/runtimes/win-x64/native/
+          mkdir -p ./storage/runtimes/${{ matrix.platform.rid }}/native/
+          cp ./cpu_features.NET/cmake-build-release/lib/* ./storage/runtimes/${{ matrix.platform.rid }}/native/
 
       - name: Git Push
         run: |
@@ -58,5 +71,5 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add .
-          git commit -m "Add win-x64 binary"
+          git commit -m "Add ${{ matrix.platform.rid }} binary"
           git push origin ${{github.head_ref}}
