--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -16,6 +16,7 @@ jobs:
         include:
         - { os: windows-latest, rid: win-x64 }
         - { os: ubuntu-22.04, rid: linux-x64 }
+        - { os: macos-latest, rid: mac-x64 }
     steps:
       - name: Echo branch name
         run: echo ${{github.head_ref}} 
