--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -16,10 +16,9 @@ jobs:
       - name: Create Pull Request
         uses: actions/github-script@v6
         with:
-          github-token: ${{secrets.TOKEN}}
           script: |
             const { repo, owner } = context.repo;
-            const branch = process.env.GITHUB_REF.replace('refs/heads', '');
+            const branch = process.env.GITHUB_REF.replace('refs/heads/', '');
             const result = await github.rest.pulls.create({
               title: '[Example] Simple demo',
               owner,
