--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -4,6 +4,10 @@ on:
   pull_request:
     branches: 
       - main
+  workflow_run:
+    workflows: ["Create PR"]
+    types:
+      - completed
   #workflow_dispatch: # TODO: replace ${{github.head_ref}} for workflow_dispatch...
 
 jobs:
