--- a/.github/workflows/create-pull-request.yml
+++ b/.github/workflows/create-pull-request.yml
@@ -1,10 +1,10 @@
 name: Create PR
 
 on:
-  push:
-    branches: [ "*", "!main" ]
+  #push:
+  #  branches: [ "*", "!main" ]
     
-  #workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
