--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -4,15 +4,15 @@ on:
   pull_request:
     branches: 
       - main
-  workflow_run:
-    workflows: ["Create PR"]
-    types:
-      - completed
+  #workflow_run:
+  #  workflows: ["Create PR"]
+  #  types:
+  #    - completed
   #workflow_dispatch: # TODO: replace ${{github.head_ref}} for workflow_dispatch...
 
 jobs:
   build:
-    name: Test build
+    name: Build ${{ matrix.rid }}
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: true
@@ -76,3 +76,10 @@ jobs:
           git add .
           git commit -m "Add ${{ matrix.rid }} binary"
           git push origin ${{github.head_ref}}
+  nuget:
+    name: Create Nuget package
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Echo branch name
+        run: echo ${{github.head_ref}}
