--- a/.github/workflows/build-binary.yml
+++ b/.github/workflows/build-binary.yml
@@ -124,6 +124,20 @@ jobs:
     steps:
       - name: Echo action ref
         run: echo ${{github.ref}} 
+
+      - name: Close PR
+        uses: actions/github-script@v6
+        with:
+          script: |
+            const { repo, owner } = context.repo;
+            const pr_id = process.env.GITHUB_REF.replace('refs/pull/', '').replace('/merge', '');
+            const result = await github.rest.pulls.update({
+                owner: owner,
+                repo: repo,
+                pull_number: pr_id,
+                state: 'closed'
+            });
+
     #https://octokit.github.io/rest.js/v18#pulls-update
     #octokit.rest.pulls.update({
     #  owner: ,
