--- a/.github/workflows/create-nuget.yml
+++ b/.github/workflows/create-nuget.yml
@@ -90,6 +90,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: toor1245/cpu_features.NET
+          ref: fix-path-shared-lib
 
       - name: Checkout current repo
         uses: actions/checkout@v3
