--- a/.github/workflows/create-nuget.yml
+++ b/.github/workflows/create-nuget.yml
@@ -14,19 +14,16 @@ env:
 
 jobs:
   build:
-    name: Build ${{ matrix.rid }}
+    name: Build ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: true
+      fail-fast: false
       matrix:
-        include: # https://docs.microsoft.com/en-us/dotnet/core/rid-catalog
-        - { os: windows-latest, rid: win-x64 }
-        - { os: ubuntu-22.04, rid: linux-x64 }
-        - { os: macos-latest, rid: osx-x64 }
+        include: 
+        - { os: windows-latest }
+        - { os: ubuntu-22.04 }
+        - { os: macos-latest }
     steps:
-      - name: Echo branch name
-        run: echo ${{github.head_ref}} 
-
       - name: Checkout current repo
         uses: actions/checkout@v3
         with:
@@ -36,37 +33,20 @@ jobs:
       - name: Install Ninja
         uses: seanmiddleditch/gha-setup-ninja@master
 
-      - name: Test Ninja
-        run: ninja --version && ls ninja-build
-
       - name: Checkout cpu_features.NET
         uses: actions/checkout@v3
         with:
           repository: toor1245/cpu_features.NET
           path: cpu_features.NET
 
-      #- name: Cache CMake project
-      #  id: project
-      #  uses: actions/cache@v3
-      #  with:
-      #    path: cpu_features.NET/cmake-build-release
-      #    key: project-${{ hashFiles('./cpu_features.NET/src/*') }}
-
       - name: Configure CMake project
-        if: steps.project.outputs.cache-hit != 'true'
-        run: |
-          cd cpu_features.NET
-          ${{ runner.os!='Windows'&&'sudo '||''}}cmake . -Bcmake-build-release -DCMAKE_BUILD_TYPE=Release ${{ runner.os=='Windows'&&'-GNinja'||''}} -DBUILD_TESTING=OFF
-#-DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-      - name: Build CMake project
-        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build "cpu_features.NET/cmake-build-release" --config=Release
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake "cpu_features.NET" -Bcmake-build-release -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Release -DCPU_FEATURES_DOTNET_PACKAGE_OUTPUT_PATH="${{github.workspace}}/storage"
 
-      - name: Copy Binary
-        shell: bash
-        run: |
-          ls ./cpu_features.NET/cmake-build-release/lib/
-          mkdir -p ./storage/runtimes/${{ matrix.rid }}/native/
-          cp ./cpu_features.NET/cmake-build-release/lib/cpu_features_dotnet.x64.* ./storage/runtimes/${{ matrix.rid }}/native/
+      - name: Build CMake project
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build "cmake-build-release" --config=Release
+
+      - name: cpu_features_dotnet_runtime_package
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build "cmake-build-release" --config=Release --target=cpu_features_dotnet_runtime_package
 
       - name: Git Push
         run: |
@@ -75,7 +55,7 @@ jobs:
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
           git add .
-          git commit -m "Add ${{ matrix.rid }} binary"
+          git commit -m "Add ${{ matrix.os }} Nuget package"
           git push origin ${{github.head_ref}}
 
   nuget:
@@ -83,13 +63,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Echo branch name
-        run: echo ${{github.head_ref}}
-
       - name: Checkout cpu_features.NET
         uses: actions/checkout@v3
         with:
           repository: toor1245/cpu_features.NET
+          path: cpu_features.NET
 
       - name: Checkout current repo
         uses: actions/checkout@v3
@@ -100,20 +78,16 @@ jobs:
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v3
 
-      - name: Copy native binaries
-        run: cp -r storage/runtimes src/CpuFeaturesDotNet
-        shell: bash
+      - name: Configure CMake project
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake "cpu_features.NET" -Bcmake-build-release -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Release -DCPU_FEATURES_DOTNET_PACKAGE_OUTPUT_PATH="${{github.workspace}}/storage"
 
-      - name: Build project
-        run: dotnet build "src/CpuFeaturesDotNet/CpuFeaturesDotNet.csproj" -c Release
-
-      - name: Pack Nuget
-        run: dotnet pack -c Release -o storage/nuget
+      - name: cpu_features_dotnet_runtime_package
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build "cmake-build-release" --config=Release --target=cpu_features_dotnet_package
        
       - name: Upload Nuget to artifacts
         uses: actions/upload-artifact@v3.1.0
         with:
-          path: storage/nuget/*.nupkg
+          path: storage/*.nupkg
 
       - name: Git Push
         run: |
@@ -121,19 +95,27 @@ jobs:
           git pull
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
-          git add nuget/*.nupkg
-          git commit -m "Add Nuget package"
+          git add .
+          git commit -m "Add general Nuget package"
           git push origin ${{github.head_ref}}
 
   test-nuget:
     name: Test Nuget
-    runs-on: ubuntu-latest
     needs: nuget
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        include: 
+        - { os: windows-latest }
+        - { os: ubuntu-22.04 }
+        - { os: macos-latest }
     steps:
       - name: Checkout cpu_features.NET
         uses: actions/checkout@v3
         with:
           repository: toor1245/cpu_features.NET
+          path: cpu_features.NET
 
       - name: Checkout current repo
         uses: actions/checkout@v3
@@ -141,51 +123,28 @@ jobs:
           ref: ${{github.head_ref}}
           path: storage
 
-      - name: Setup .NET Core SDK
+      - name: Setup .NET
         uses: actions/setup-dotnet@v3
-      
-      - name: Restore .Net packages
-        run: dotnet restore --configfile storage/NuGet.Config
-      
-      - name: Build project
-        run: dotnet build "samples/CpuFeaturesDotNet.Samples/CpuFeaturesDotNet.Samples.csproj"
+        with:
+          dotnet-version: |
+            3.1.x
+            5.0.x
+            6.0.x
 
-#      - name: Run samples
-#        run: 
-        
-        
-      #TODO: push nuget
-#  close-pr:
-#    name: Close PR
-#    runs-on: ubuntu-latest
-#    needs: nuget
-#    steps:
-#      - name: Echo action ref
-#        run: echo ${{github.ref}} 
-#
-#      - name: Close PR
-#        uses: actions/github-script@v6
-#        with:
-#          script: |
-#            const { repo, owner } = context.repo;
-#            const pr_id = process.env.GITHUB_REF.replace('refs/pull/', '').replace('/merge', '');
-#            const result = await github.rest.pulls.update({
-#                owner: owner,
-#                repo: repo,
-#                pull_number: pr_id,
-#                state: 'closed'
-#            });
-#
-    #https://octokit.github.io/rest.js/v18#pulls-update
-    #octokit.rest.pulls.update({
-    #  owner: ,
-    #  repo: ,
-    #  pull_number: ,
-    #  state: 'closed'
-    #});
-    #https://octokit.github.io/rest.js/v18#pulls-merge
-    #octokit.rest.pulls.merge({
-    #  owner,
-    #  repo,
-    #  pull_number,
-    #});
+      - name: Configure CMake project
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake "cpu_features.NET" -Bcmake-build-release -DBUILD_TESTING=OFF -DCMAKE_BUILD_TYPE=Release -DCPU_FEATURES_DOTNET_PACKAGE_OUTPUT_PATH="${{github.workspace}}/storage"
+
+      - name: cpu_features_dotnet_runtime_package
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build "cmake-build-release" --config=Release --target=cpu_features_dotnet_package
+
+      - name: Add NuGet package to tests
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}cmake --build cmake-build-release --config=Release --target add_nuget_package_to_tests
+
+      - name: Create build
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}dotnet build "cpu_features.NET/src/CpuFeaturesDotNet" -c Release --force
+
+      - name: Run Unit Tests for .Net Core 3.1
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}dotnet test "cpu_features.NET/tests" -c Release -f netcoreapp3.1
+
+      - name: Run Unit Tests for .Net 5.0
+        run: ${{ runner.os!='Windows'&&'sudo '||''}}dotnet test "cpu_features.NET/tests" -c Release -f net5.0
